--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>urban-design-sim</title>
     <meta name="description" content="SustainCity Generated Project" />
-    <meta name="author" content="SustainCity" />
+    <meta name="author" content="Vijay Vijayaraja , Sathvik Hardisu , Evan Zhou" />
   </head>
 
   <body>
