--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>urban-design-sim</title>
-    <meta name="description" content="SustainCity Generated Project" />
-    <meta name="author" content="Vijay Vijayaraja , Sathvik Hardisu , Evan Zhou" />
+    <meta name="description" />
+    <meta
+      name="author"
+      content="Vijay Vijayaraja , Sathvik Hardisu , Evan Zhou"
+    />
   </head>
 
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
