--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>urban-design-sim</title>
+    <title>Sustain City</title>
     <meta name="description" content="Urban Design Simulator" />
     <meta name="author" content="Urban Design Team" />
   </head>
